--- a/catalog.html
+++ b/catalog.html
@@ -9,23 +9,22 @@
   		<div class="header-top">
   			<div class="container">
 
-  				<a class="header-logo" href="index.html">ТЕХНОМАРТ</a> <!-- Логотип -->
+  				<a class="header-logo" href="index.html">Техномарт</a>
 
   				<div class="search"><input type="search" placeholder="поиск"></div>
-    			<div class="bookmarks"><p>Закладки: 0</p></div>
-    			<div class="basket"><p>Корзина: 10</p></div>
-    			<div class="checkout"><p>Оформить заказ</p></div>
+    			<div class="bookmarks">Закладки: 0</div>
+    			<div class="basket">Корзина: 10</div>
+    			<div class="checkout">Оформить заказ</div>
 
     		</div>
     	</div>
 
     	<div class="header-middle">
     		<div class="container">
-    			<h1>Интернет-магазин<br>
-    				строительных материалов<br>
-    			и инструментов для ремонта</h1>
 
-    			<div class="phone-and-adress">
+    			<h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
+
+    			<div class="contacts">
     				<p>+7 (812) 555-05-55</p>
     				<p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
     			</div>
@@ -33,14 +32,13 @@
     			<div class="user-navigation">
     				<div class="user-name">
     					<ul>
-    						<li><a href="#">Профиль</a></li>
-	    					<li><a href="#">Равшан Джамшутович</a></li>
+	    					<li>Равшан Джамшутович</li>
 	    					<li><a href="#">Выход</a></li>
 	    				</ul>
 	    			</div>
 	    			<ul>
-	    				<li class="my-orders"><a href="#">Мои заказы</a></li>
-	    				<li class="personal-area"><a href="#">Личный кабинет</a></li>
+	    				<li><a href="#">Мои заказы</a></li>
+	    				<li><a href="#">Личный кабинет</a></li>
 	    			</ul>
 	    		</div>
 
@@ -75,20 +73,19 @@
 
     	<section class="sorting">
     		<h3>Сортировка:</h3>
-    		<ul>
-    			<li class="sorting-current"><a href="#">По цене</a></li>
-    			<li><a href="#">По типу</a></li>
-    			<li><a href="#">По функционалу</a></li>
-    			<li><a href="increased"></a></li>
-    			<li><a href="decreased"></a></li>
-    		</ul>
+    		<div class="sorting-options">
+    			<a href="#" class="option-price option-current">По цене</a>
+	        <a href="#" class="option-type">По типу</a>
+	        <a href="#" class="option-functions">По функционалу</a>
+	        <a class="option-up-arrow option-current" href="#"></a>
+	        <a class="option-down-arrow" href="#"></a>
+	      </div>
     	</section>
 
     	<section class="catalog">
 
     		<h2 class="visually-hidden">Список перфораторов</h2>
-
-    		<div class="catalog-list">
+    		
     			<div class="product-item">
     				<img src="img.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 3000">
     				<a href="#"><h3>Перфоратор BOSCH BFG 3000</h3></a>
@@ -108,9 +105,9 @@
     			</div>
 
           <div class="product-item">
-          	<a href="">КУПИТЬ</a>
+          	<a href="">купить</a>
           	<form>
-          		<button type="submit">В ЗАКЛАДКИ</button>
+          		<button type="submit">в закладки</button>
           	</form>
           	<a href=""><h3>Перфоратор BOSCH BFG 2000</h3></a>
           	<div class="price">
@@ -170,13 +167,11 @@
     				</div>
     			</div>
 
-    		</div>
-
     		<ul class="pagination">
-    			<li class="pagination-item pagination-item-current"><a>1</a></li>
-    			<li class="pagination-item"><a href="#">2</a></li>
-    			<li class="pagination-item"><a href="#">3</a></li>
-    			<li class="pagination-item"><a href="#">Следующая</a></li>
+    			<li class="pagination pagination-current"><a>1</a></li>
+    			<li class="pagination"><a href="#">2</a></li>
+    			<li class="pagination"><a href="#">3</a></li>
+    			<li class="pagination"><a href="#">Следующая</a></li>
     		</ul>
 
     	</section>
@@ -195,7 +190,7 @@
     <footer>
 
     	<div class="footer-top">
-    		<a class="header-logo" href="index.html">ТЕХНОМАРТ</a> <!-- Логотип в футере -->
+    		<a class="header-logo" href="index.html">Техномарт</a> <!-- Логотип в футере -->
 
       	<ul>
 	    		<li><a href="#">Компания</a></li>
