--- a/index.html
+++ b/index.html
@@ -9,28 +9,27 @@
   		<div class="header-top">
   			<div class="container">
 
-  				<a class="header-logo" href="index.html">ТЕХНОМАРТ</a> <!-- Логотип -->
+  				<a class="header-logo" href="index.html">Техномарт</a> <!-- Логотип -->
 
   				<div class="search"><input type="search" placeholder="поиск"></div>
-    			<div class="bookmarks"><p>Закладки: 0</p></div>
-    			<div class="basket"><p>Корзина: 10</p></div>
-    			<div class="checkout"><p>Оформить заказ</p></div>
+    			<div class="bookmarks">Закладки: 0</div>
+    			<div class="basket">Корзина: 10</div>
+    			<div class="checkout">Оформить заказ</div>
 
     		</div>
     	</div>
 
     	<div class="header-middle">
     		<div class="container">
-    			<h1>Интернет-магазин<br>
-    				строительных материалов<br>
-    			и инструментов для ремонта</h1>
+    			
+    			<h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
 
-    			<div class="phone-and-adress">
+    			<div class="contacts">
     				<p>+7 (812) 555-05-55</p>
     				<p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
     			</div>
 
-        <div class="enter-and-register">
+        <div class="authorization">
           <div class="enter">
             <a href="#">Войти</a>
           </div>
@@ -65,19 +64,19 @@
 	  				<li>
 	  					<div class="feature-item">
 	  						<p>Материалы</p>
-	  						<a href="#">НА ЛЮБОЙ ВКУС</a>
+	  						<a href="#">На любой вкус</a>
 		  				</div>
 			  		</li>
 			  		<li>
 			  			<div class="feature-item">
 			  				<p>Инструменты</p>
-			          <a href="#">НА ВСЕ СЛУЧАИ</a>
+			          <a href="#">На все случаи</a>
 			        </div>
 			      </li>
 			      <li>
 			        <div class="feature-item">
 			          <p>Техника</p>
-			          <a href="#">ДЛЯ СТРОЙКИ</a>
+			          <a href="#">Для стройки</a>
 			        </div>
 			      </li>
 			    </ul>
@@ -87,25 +86,25 @@
 			      <li>
 			        <div class="feature-item">
 			          <p>Скидки 50%</p>
-			          <a href="#">НА 350 ТОВАРОВ</a>
+			          <a href="#">На 350 товаров</a>
 			        </div>
 			      </li>
 			      <li>
 			        <div class="feature-item">
 			          <p>Доставка</p>
-			          <a href="#">БЕСПЛАТНО</a>
+			          <a href="#">Бесплатно</a>
 			        </div>
 			      </li>
 			    </ul>
 			    <section class="slider">
 			      <div class="slide">
-			        <p>ПЕРФОРАТОРЫ</p>
+			        <p>Перфораторы</p>
 			        <p>Настоящие мужские игрушки</p>
 			        <img src="img/slider-1.jpg" alt="slider-1">
 			        <a href="catalog.html">Открыть каталог</a>
 			      </div>
 			      <div class="slide">
-			        <p>ДРЕЛИ</p>
+			        <p>Дрели</p>
 			        <p>Соседям на радость!</p>
 			        <img src="img/slider-2.jpg" alt="slider-2">
 			        <a href="catalog.html">Открыть каталог</a>
@@ -117,7 +116,7 @@
 
 		<section class="popular-items">
 			<div class="container">
-				<h3>ПОПУЛЯРНЫЕ ТОВАРЫ:</h3>
+				<h3>Популярные товары:</h3>
 				<a href="#">Все популярные товары</a>
         <ul class="items-list">
           <li>
@@ -157,7 +156,7 @@
 
     <section class="popular-brands">
     	<div class="container">
-    		<h2>ПОПУЛЯРНЫЕ ПРОИЗВОДИТЕЛИ</h2>
+    		<h2>Популярные производители</h2>
         <a href="#">Все производители</a>
         <ul class="brands-list">
           <li>
@@ -191,7 +190,7 @@
     <section class="services">
       <div class="services-header">
         <div class="container">
-          <h2>СЕРВИСЫ</h2>
+          <h2>Сервисы</h2>
           <p>Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
         </div>
       </div>
@@ -216,17 +215,17 @@
           </ul>
           <div class="services-slider-items">
             <div class="slide-delivery">
-              <h3>ДОСТАВКА</h3>
+              <h3>Доставка</h3>
               <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
             </div>
             <div class="slide-guarantee">
-              <h3>ГАРАНТИЯ</h3>
+              <h3>Гарантия</h3>
               <p>Если купленный у нас товар поломается или заискрит, а также в случае пожара, спровоцированного его возгаранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. Дом уж восстановите как-нибудь сами.</p>
             </div>
             <div class="slide-credit">
-              <h3>КРЕДИТ</h3>
+              <h3>Кредит</h3>
               <p>Залезть в долговую яму стало проще! Кредитные консультанты придут вам на помощь.</p>
-              <a href="#">ОТПРАВИТЬ ЗАЯВКУ</a>
+              <a href="#">Отправить заявку</a>
             </div>
           </div>
         </div>
@@ -236,7 +235,7 @@
     <section class="info">
       <div class="container">
         <div class="info-about">
-          <h2>КОМПАНИЯ ТЕХНОМАРТ</h2>
+          <h2>Компания Техномарт</h2>
           <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
           <p>Мы можем доставить ваш товар в самые отдаленные точки России!Техномарт работает со многими транспортными компаниями: </p>
           <ul>
@@ -244,13 +243,13 @@
             <li>Автотрейдинг</li>
             <li>Желдорэкспедиция</li>
           </ul>
-          <a href="#">ПОДРОБНЕЕ О КОМПАНИИ</a>
+          <a href="#">Подробнее о компании</a>
         </div>
         <div class="info-contacts">
-          <h2>КОНТАКТЫ</h2>
+          <h2>Контакты</h2>
           <p>Вы можете забрать товар сами, заехав в наш офис:</p>
           <img src="img/map.png" alt="map">
-          <a href="#">ЗАБЛУДИЛИСЬ? НАПИШИТЕ НАМ!</a>
+          <a href="#">Заблудились? Напишите нам!</a>
           <img src="img/map-popup.png" alt="map-popup">
         </div>
       </div>
@@ -260,7 +259,7 @@
   <footer>
     <div class="footer-top">
       <div class="container">
-        <a href="#">ТЕХНОМАРТ</a>
+        <a href="#">Техномарт</a>
         <ul>
           <li><a href="#">Компания</a></li>
           <li><a href="#">Новости</a></li>
