--- a/catalog.html
+++ b/catalog.html
@@ -7,20 +7,16 @@
   <body>
   	<header class="page-header">
   		<div class="header-top">
-  			<div class="container">
 
   				<a class="header-logo" href="index.html">Техномарт</a>
 
   				<div class="search"><input type="search" placeholder="поиск"></div>
-    			<div class="bookmarks">Закладки: 0</div>
-    			<div class="basket">Корзина: 10</div>
-    			<div class="checkout">Оформить заказ</div>
-
+    			<a class="bookmarks">Закладки: 0</a>
+    			<a class="basket">Корзина: 10</a>
+    			<a class="checkout">Оформить заказ</a>
     		</div>
-    	</div>
 
     	<div class="header-middle">
-    		<div class="container">
 
     			<h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
 
@@ -30,15 +26,13 @@
     			</div>
 
     			<div class="user-navigation">
-    				<div class="user-name">
-    					<ul>
-	    					<li>Равшан Джамшутович</li>
+    					<ul class="user-block">
+	    					<li><a href="#">Равшан Джамшутович</a></li>
 	    					<li><a href="#">Выход</a></li>
 	    				</ul>
-	    			</div>
 	    			<ul>
-	    				<li><a href="#">Мои заказы</a></li>
-	    				<li><a href="#">Личный кабинет</a></li>
+	    				<li><a href="#" class="user-link">Мои заказы</a></li>
+	    				<li><a href="#" class="user-link">Личный кабинет</a></li>
 	    			</ul>
 	    		</div>
 
@@ -54,7 +48,6 @@
 		    		</ul> <!-- Навигация -->
 		    	</nav>
 		    </div>
-		  </div>
 		</header>
 
 		<main class="container">
@@ -176,7 +169,7 @@
 
     	</section>
 
-    	<section>
+    	<section class="main-bottom">
 
     		<h3>Пара слов о перфораторах</h3>
     		<p>
