--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <body>
   	<header class="page-header">
   		<div class="header-top">
-  			<div class="container">
 
   				<a class="header-logo" href="index.html">Техномарт</a> <!-- Логотип -->
 
@@ -15,12 +14,9 @@
     			<div class="bookmarks">Закладки: 0</div>
     			<div class="basket">Корзина: 10</div>
     			<div class="checkout">Оформить заказ</div>
-
     		</div>
-    	</div>
 
     	<div class="header-middle">
-    		<div class="container">
     			
     			<h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
 
@@ -38,7 +34,7 @@
           </div>
         </div>
 
-        <nav class="main-navigation">
+        <nav class="header-bottom">
         	<ul>
             <li><a href="index.html">Главная</a></li>
             <li><a href="#">Компания</a></li>
@@ -50,7 +46,6 @@
           </ul>
         </nav>
       </div>
-    </div>
   </header>
   <main>
 
