Переработаны карточки каталога

--- a/catalog.html
+++ b/catalog.html
@@ -78,87 +78,87 @@
     	<section class="catalog">
 
     		<h2 class="visually-hidden">Список перфораторов</h2>
-    		
-    			<div class="product-item">
-    				<img src="img.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 3000">
-    				<a href="#"><h3>Перфоратор BOSCH BFG 3000</h3></a>
-    				<div class="price">
-    					<p>22500 Р.</p>
-    					<p>15500 Р.</p>
-    				</div>
-    			</div>
 
-    			<div class="product-item">
-    				<img src="img.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 6000">
-    				<a href="#"><h3>Перфоратор BOSCH BFG 6000</h3></a>
-    				<div class="price">
-    					<p>30500 Р.</p>
-    					<p>25500 Р.</p>
-    				</div>
-    			</div>
+    		<div class="catalog-item">
+    			<img src="img.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 3000">
+    			<div class="catalog-item-buttons">
+    				<a href="#" class="button-item-buy">Купить</a>
+						<a href="#" class="button-item-bookmark">В закладки</a>
+					</div>
+					<a href="# class="catalog-item-vendor">Перфоратор BOSCH</a>
+					<a href="# class="catalog-item-model">BFG 3000</a>
+					<a href="# class="catalog-item-price">22500 Р.</a>
+					<a href="# class="catalog-item-discount">15500 Р.</a>
+				</div>
 
-          <div class="product-item">
-          	<a href="">купить</a>
-          	<form>
-          		<button type="submit">в закладки</button>
-          	</form>
-          	<a href=""><h3>Перфоратор BOSCH BFG 2000</h3></a>
-          	<div class="price">
-          		<p>12500 Р.</p>
-          	</div>
-          </div>
-    			
-    			<div class="product-item">
-    				<img src="img.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 3000">
-    				<a href="#"><h3>Перфоратор BOSCH BFG 3000</h3></a>
-    				<div class="price">
-    					<p>22500 Р.</p>
-    					<p>15500 Р.</p>
-    				</div>
-    			</div>
+    		<div class="catalog-item">
+    			<img src="img.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 6000">
+    			<div class="catalog-item-buttons">
+    				<a href="#" class="button-item-buy">Купить</a>
+						<a href="#" class="button-item-bookmark">В закладки</a>
+					</div>
+					<a href="# class="catalog-item-vendor">Перфоратор BOSCH</a>
+					<a href="# class="catalog-item-model">BFG 6000</a>
+					<a href="# class="catalog-item-price">30500 Р.</a>
+					<a href="# class="catalog-item-discount">22500 Р.</a>
+				</div>
 
-    			<div class="product-item">
-    				<img src="img.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 6000">
-    				<a href="#"><h3>Перфоратор BOSCH BFG 6000</h3></a>
-    				<div class="price">
-    					<p>30500 Р.</p>
-    					<p>25500 Р.</p>
-    				</div>
-    			</div>
+    		<div class="catalog-item">
+    			<img src="img.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 2000">
+    			<div class="catalog-item-buttons">
+    				<a href="#" class="button-item-buy">Купить</a>
+						<a href="#" class="button-item-bookmark">В закладки</a>
+					</div>
+					<a href="# class="catalog-item-vendor">Перфоратор BOSCH</a>
+					<a href="# class="catalog-item-model">BFG 2000</a>
+					<a href="# class="catalog-item-discount">12500 Р.</a>
+				</div>
 
-    			<div class="product-item">
-    				<img src="img.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 2000">
-    				<a href="#"><h3>Перфоратор BOSCH BFG 2000</h3></a>
-    				<div class="price">
-    					<p>12500 Р.</p>
-    				</div>
-    			</div>
+    		<div class="catalog-item">
+    			<img src="img.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 6000">
+    			<div class="catalog-item-buttons">
+    				<a href="#" class="button-item-buy">Купить</a>
+						<a href="#" class="button-item-bookmark">В закладки</a>
+					</div>
+					<a href="# class="catalog-item-vendor">Перфоратор BOSCH</a>
+					<a href="# class="catalog-item-model">BFG 6000</a>
+					<a href="# class="catalog-item-price">30500 Р.</a>
+					<a href="# class="catalog-item-discount">22500 Р.</a>
+				</div>
 
-    			<div class="product-item">
-    				<img src="img.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 3000">
-    				<a href="#"><h3>Перфоратор BOSCH BFG 3000</h3></a>
-    				<div class="price">
-    					<p>22500 Р.</p>
-    					<p>15500 Р.</p>
-    				</div>
-    			</div>
+    		<div class="catalog-item">
+    			<img src="img.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 2000">
+    			<div class="catalog-item-buttons">
+    				<a href="#" class="button-item-buy">Купить</a>
+						<a href="#" class="button-item-bookmark">В закладки</a>
+					</div>
+					<a href="# class="catalog-item-vendor">Перфоратор BOSCH</a>
+					<a href="# class="catalog-item-model">BFG 2000</a>
+					<a href="# class="catalog-item-discount">12500 Р.</a>
+				</div>
 
-    			<div class="product-item">
-    				<img src="img.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 6000">
-    				<a href="#"><h3>Перфоратор BOSCH BFG 6000</h3></a>
-    				<div class="price">
-    					<p>30500 Р.</p>
-    					<p>25500 Р.</p>
-    				</div>
-    			</div>
+    		<div class="catalog-item">
+    			<img src="img.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 6000">
+    			<div class="catalog-item-buttons">
+    				<a href="#" class="button-item-buy">Купить</a>
+						<a href="#" class="button-item-bookmark">В закладки</a>
+					</div>
+					<a href="# class="catalog-item-vendor">Перфоратор BOSCH</a>
+					<a href="# class="catalog-item-model">BFG 6000</a>
+					<a href="# class="catalog-item-price">30500 Р.</a>
+					<a href="# class="catalog-item-discount">22500 Р.</a>
+				</div>
 
-    			<div class="product-item">
-    				<img src="img.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 2000">
-    				<a href="#"><h3>Перфоратор BOSCH BFG 3000</h3></a>
-    				<div class="price">
-    					<p>12500 Р.</p>
-    				</div>
-    			</div>
+    		<div class="catalog-item">
+    			<img src="img.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 2000">
+    			<div class="catalog-item-buttons">
+    				<a href="#" class="button-item-buy">Купить</a>
+						<a href="#" class="button-item-bookmark">В закладки</a>
+					</div>
+					<a href="# class="catalog-item-vendor">Перфоратор BOSCH</a>
+					<a href="# class="catalog-item-model">BFG 2000</a>
+					<a href="# class="catalog-item-discount">12500 Р.</a>
+				</div>
 
     		<ul class="pagination">
     			<li class="pagination pagination-current"><a>1</a></li>
