--- a/catalog.html
+++ b/catalog.html
@@ -209,17 +209,25 @@
 	    </div>
 
 	    <div class="footer-bottom">
-	    	<p>© 2010–2017 Компания «Техномарт»</p>
-	    	<p>Все права защищены</p>
+	    	<div class="footer-bottom-copyright">
+	    		<p>© 2010–2017 Компания «Техномарт»</p>
+	    		<p>Все права защищены</p>
+	    	</div>
 
-        <ul>
-          <li><a class="social-button" href="#">Вконтакте</a></li>
+	    	<ul class="footer-bottom-social">
+	    		<li><a class="social-button" href="#">Вконтакте</a></li>
           <li><a class="social-button" href="#">Фейсбук</a></li>
           <li><a class="social-button" href="#">Инстаграм</a></li>
         </ul>
 
-        <p>Обратная связь: <a href="#"><b>mail@htmlacademy.ru</b></a></p>
-        <p>Разработано - <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
+        <div class="footer-bottom-feedback">
+        	<p>Обратная связь: </p>
+        	<a class="footer-feedback-mail" href="#">mail@htmlacademy.ru</a>
+        </div>
+        <div class="footer-bottom-developed">
+        	<p>Разработано - </p>
+        	<a class="footer-feedback-site" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
+        </div>
       </div>
     </footer>
   </body>
