Добавлены блоки и уникальные классы для стилизации

--- a/catalog.html
+++ b/catalog.html
@@ -182,10 +182,10 @@
 
     <footer>
     	<div class="footer-top">
-    		<a class="header-logo" href="index.html">Техномарт</a> <!-- Логотип в футере -->
+    		<a class="footer-logo" href="index.html">Техномарт</a> <!-- Логотип в футере -->
 
-    		<ul>
-	    		<li><a href="#">Компания</a></li>
+    		<ul class="footer-navigation-top">
+    			<li><a href="#">Компания</a></li>
 		      <li><a href="#">Новости</a></li>
 		      <li><a href="catalog.html">Каталог</a></li>
 		      <li><a href="#">Доставка</a></li>
@@ -194,10 +194,12 @@
 		  </div>
 
 		  <div class="footer-middle">
-		  	<p>г. Санкт-Петербург, ул.Б.Конюшенная, д.19/8</p>
-		  	<p>+7(812)555-05-55</p>
+		  	<div class="footer-contacts">
+		  		<p>г. Санкт-Петербург, ул.Б.Конюшенная, д.19/8</p>
+		  		<p>+7(812)555-05-55</p>
+		  	</div>
 
-		  	<ul>
+		  	<ul class="footer-navigation-middle">
 		  		<li><a href="">Материалы</a></li>
 	        <li><a href="">Техника</a></li>
 	        <li><a href="">Инструмент</a></li>
