Переработаны названия классов для лучшего понимания
Дополнительно исправлены ошибки

--- a/catalog.html
+++ b/catalog.html
@@ -20,19 +20,19 @@
 
     			<h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
 
-    			<div class="contacts">
+    			<div class="header-middle-contacts">
     				<p>+7 (812) 555-05-55</p>
     				<p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
     			</div>
 
     			<div class="user-navigation">
-    					<ul class="user-block">
+    					<ul class="user-navigation-block">
 	    					<li><a href="#">Равшан Джамшутович</a></li>
 	    					<li><a href="#">Выход</a></li>
 	    				</ul>
 	    			<ul>
-	    				<li><a href="#" class="user-link">Мои заказы</a></li>
-	    				<li><a href="#" class="user-link">Личный кабинет</a></li>
+	    				<li><a href="#" class="user-navigation-link">Мои заказы</a></li>
+	    				<li><a href="#" class="user-navigation-link">Личный кабинет</a></li>
 	    			</ul>
 	    		</div>
 
@@ -67,9 +67,9 @@
     	<section class="sorting">
     		<h3>Сортировка:</h3>
     		<div class="sorting-options">
-    			<a href="#" class="option-price option-current">По цене</a>
-	        <a href="#" class="option-type">По типу</a>
-	        <a href="#" class="option-functions">По функционалу</a>
+    			<a href="#" class="sorting-option-price sorting-options-current">По цене</a>
+	        <a href="#" class="sorting-option-type">По типу</a>
+	        <a href="#" class="sorting-option-function">По функционалу</a>
 	        <a class="option-up-arrow option-current" href="#"></a>
 	        <a class="option-down-arrow" href="#"></a>
 	      </div>
@@ -85,10 +85,10 @@
     				<a href="#" class="button-item-buy">Купить</a>
 						<a href="#" class="button-item-bookmark">В закладки</a>
 					</div>
-					<a href="# class="catalog-item-vendor">Перфоратор BOSCH</a>
-					<a href="# class="catalog-item-model">BFG 3000</a>
-					<a href="# class="catalog-item-price">22500 Р.</a>
-					<a href="# class="catalog-item-discount">15500 Р.</a>
+					<a href="#" class="catalog-item-vendor">Перфоратор BOSCH</a>
+					<a href="#" class="catalog-item-model">BFG 3000</a>
+					<a href="#" class="catalog-item-price">22500 Р.</a>
+					<a href="#" class="catalog-item-discount">15500 Р.</a>
 				</div>
 
     		<div class="catalog-item">
@@ -97,10 +97,10 @@
     				<a href="#" class="button-item-buy">Купить</a>
 						<a href="#" class="button-item-bookmark">В закладки</a>
 					</div>
-					<a href="# class="catalog-item-vendor">Перфоратор BOSCH</a>
-					<a href="# class="catalog-item-model">BFG 6000</a>
-					<a href="# class="catalog-item-price">30500 Р.</a>
-					<a href="# class="catalog-item-discount">22500 Р.</a>
+					<a href="#" class="catalog-item-vendor">Перфоратор BOSCH</a>
+					<a href="#" class="catalog-item-model">BFG 6000</a>
+					<a href="#" class="catalog-item-price">30500 Р.</a>
+					<a href="#" class="catalog-item-discount">22500 Р.</a>
 				</div>
 
     		<div class="catalog-item">
@@ -109,9 +109,21 @@
     				<a href="#" class="button-item-buy">Купить</a>
 						<a href="#" class="button-item-bookmark">В закладки</a>
 					</div>
-					<a href="# class="catalog-item-vendor">Перфоратор BOSCH</a>
-					<a href="# class="catalog-item-model">BFG 2000</a>
-					<a href="# class="catalog-item-discount">12500 Р.</a>
+					<a href="#" class="catalog-item-vendor">Перфоратор BOSCH</a>
+					<a href="#" class="catalog-item-model">BFG 2000</a>
+					<a href="#" class="catalog-item-discount">12500 Р.</a>
+				</div>
+
+    		<div class="catalog-item">
+    			<img src="img.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 3000">
+    			<div class="catalog-item-buttons">
+    				<a href="#" class="button-item-buy">Купить</a>
+						<a href="#" class="button-item-bookmark">В закладки</a>
+					</div>
+					<a href="#" class="catalog-item-vendor">Перфоратор BOSCH</a>
+					<a href="#" class="catalog-item-model">BFG 3000</a>
+					<a href="#" class="catalog-item-price">22500 Р.</a>
+					<a href="#" class="catalog-item-discount">15500 Р.</a>
 				</div>
 
     		<div class="catalog-item">
@@ -120,10 +132,10 @@
     				<a href="#" class="button-item-buy">Купить</a>
 						<a href="#" class="button-item-bookmark">В закладки</a>
 					</div>
-					<a href="# class="catalog-item-vendor">Перфоратор BOSCH</a>
-					<a href="# class="catalog-item-model">BFG 6000</a>
-					<a href="# class="catalog-item-price">30500 Р.</a>
-					<a href="# class="catalog-item-discount">22500 Р.</a>
+					<a href="#" class="catalog-item-vendor">Перфоратор BOSCH</a>
+					<a href="#" class="catalog-item-model">BFG 6000</a>
+					<a href="#" class="catalog-item-price">30500 Р.</a>
+					<a href="#" class="catalog-item-discount">22500 Р.</a>
 				</div>
 
     		<div class="catalog-item">
@@ -132,9 +144,21 @@
     				<a href="#" class="button-item-buy">Купить</a>
 						<a href="#" class="button-item-bookmark">В закладки</a>
 					</div>
-					<a href="# class="catalog-item-vendor">Перфоратор BOSCH</a>
-					<a href="# class="catalog-item-model">BFG 2000</a>
-					<a href="# class="catalog-item-discount">12500 Р.</a>
+					<a href="#" class="catalog-item-vendor">Перфоратор BOSCH</a>
+					<a href="#" class="catalog-item-model">BFG 2000</a>
+					<a href="#" class="catalog-item-discount">12500 Р.</a>
+				</div>
+
+    		<div class="catalog-item">
+    			<img src="img.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 3000">
+    			<div class="catalog-item-buttons">
+    				<a href="#" class="button-item-buy">Купить</a>
+						<a href="#" class="button-item-bookmark">В закладки</a>
+					</div>
+					<a href="#" class="catalog-item-vendor">Перфоратор BOSCH</a>
+					<a href="#" class="catalog-item-model">BFG 3000</a>
+					<a href="#" class="catalog-item-price">22500 Р.</a>
+					<a href="#" class="catalog-item-discount">15500 Р.</a>
 				</div>
 
     		<div class="catalog-item">
@@ -143,10 +167,10 @@
     				<a href="#" class="button-item-buy">Купить</a>
 						<a href="#" class="button-item-bookmark">В закладки</a>
 					</div>
-					<a href="# class="catalog-item-vendor">Перфоратор BOSCH</a>
-					<a href="# class="catalog-item-model">BFG 6000</a>
-					<a href="# class="catalog-item-price">30500 Р.</a>
-					<a href="# class="catalog-item-discount">22500 Р.</a>
+					<a href="#" class="catalog-item-vendor">Перфоратор BOSCH</a>
+					<a href="#" class="catalog-item-model">BFG 6000</a>
+					<a href="#" class="catalog-item-price">30500 Р.</a>
+					<a href="#" class="catalog-item-discount">22500 Р.</a>
 				</div>
 
     		<div class="catalog-item">
@@ -155,22 +179,21 @@
     				<a href="#" class="button-item-buy">Купить</a>
 						<a href="#" class="button-item-bookmark">В закладки</a>
 					</div>
-					<a href="# class="catalog-item-vendor">Перфоратор BOSCH</a>
-					<a href="# class="catalog-item-model">BFG 2000</a>
-					<a href="# class="catalog-item-discount">12500 Р.</a>
+					<a href="#" class="catalog-item-vendor">Перфоратор BOSCH</a>
+					<a href="#" class="catalog-item-model">BFG 2000</a>
+					<a href="#" class="catalog-item-discount">12500 Р.</a>
 				</div>
 
     		<ul class="pagination">
-    			<li class="pagination pagination-current"><a>1</a></li>
-    			<li class="pagination"><a href="#">2</a></li>
-    			<li class="pagination"><a href="#">3</a></li>
-    			<li class="pagination"><a href="#">Следующая</a></li>
+    			<li class="pagination-current"><a>1</a></li>
+    			<li><a href="#">2</a></li>
+    			<li><a href="#">3</a></li>
+    			<li><a href="#">Следующая</a></li>
     		</ul>
 
     	</section>
 
     	<section class="main-bottom">
-
     		<h3>Пара слов о перфораторах</h3>
     		<p>
     			Перфоратор - универсальный строительный инструмент. Предназначенный для сверления и долбления отверстий в кирпиче, бетоне и камне.
@@ -184,7 +207,7 @@
     	<div class="footer-top">
     		<a class="footer-logo" href="index.html">Техномарт</a> <!-- Логотип в футере -->
 
-    		<ul class="footer-navigation-top">
+    		<ul class="footer-top-navigation">
     			<li><a href="#">Компания</a></li>
 		      <li><a href="#">Новости</a></li>
 		      <li><a href="catalog.html">Каталог</a></li>
@@ -194,12 +217,12 @@
 		  </div>
 
 		  <div class="footer-middle">
-		  	<div class="footer-contacts">
+		  	<div class="footer-middle-contacts">
 		  		<p>г. Санкт-Петербург, ул.Б.Конюшенная, д.19/8</p>
 		  		<p>+7(812)555-05-55</p>
 		  	</div>
 
-		  	<ul class="footer-navigation-middle">
+		  	<ul class="footer-middle-navigation">
 		  		<li><a href="">Материалы</a></li>
 	        <li><a href="">Техника</a></li>
 	        <li><a href="">Инструмент</a></li>
@@ -240,7 +263,7 @@
     		</div>
     	</form>
     </div>
-
+    
   </body>
   </html>
 
