Исправил ошибки верстки на главной
1) Исправлены отступы на главной
2) Исправлены карточки товаров на главной

--- a/index.html
+++ b/index.html
@@ -8,27 +8,27 @@
   	<header class="page-header">
   		<div class="header-top">
 
-  				<a class="header-logo" href="index.html">Техномарт</a> <!-- Логотип -->
+  			<a class="header-logo" href="index.html">Техномарт</a> <!-- Логотип -->
 
-  				<div class="search"><input type="search" placeholder="поиск"></div>
-    			<div class="bookmarks">Закладки: 0</div>
-    			<div class="basket">Корзина: 10</div>
-    			<div class="checkout">Оформить заказ</div>
-    		</div>
+  			<div class="search"><input type="search" placeholder="поиск"></div>
+  			<div class="bookmarks">Закладки: 0</div>
+    		<div class="basket">Корзина: 10</div>
+    		<div class="checkout">Оформить заказ</div>
+    	</div>
 
     	<div class="header-middle">
-    			
-    			<h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
 
-    			<div class="contacts">
-    				<p>+7 (812) 555-05-55</p>
-    				<p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+    		<h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
+
+    		<div class="contacts">
+    			<p>+7 (812) 555-05-55</p>
+    			<p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+    		</div>
+
+    		<div class="authorization">
+    			<div class="enter">
+    				<a href="#">Войти</a>
     			</div>
-
-        <div class="authorization">
-          <div class="enter">
-            <a href="#">Войти</a>
-          </div>
           <div class="register">
             <a href="#">Регистрация</a>
           </div>
@@ -46,117 +46,135 @@
           </ul>
         </nav>
       </div>
-  </header>
-  <main>
+    </header>
 
-  	<section class="features">
-  		<div class="container">
+    <main>
+    	<section class="features">
+    		<div class="container">
 
-  			<h2 class="visually-hidden">Особенности</h2>
+    			<h2 class="visually-hidden">Особенности</h2>
 
-  			<div first="first-features">
-  				<ul class="feature-items">
-	  				<li>
-	  					<div class="feature-item">
-	  						<p>Материалы</p>
-	  						<a href="#">На любой вкус</a>
-		  				</div>
-			  		</li>
-			  		<li>
-			  			<div class="feature-item">
-			  				<p>Инструменты</p>
-			          <a href="#">На все случаи</a>
-			        </div>
-			      </li>
-			      <li>
-			        <div class="feature-item">
-			          <p>Техника</p>
-			          <a href="#">Для стройки</a>
-			        </div>
-			      </li>
-			    </ul>
-			  </div>
-			  <div class="last-features">
-			    <ul class="feature-items">
-			      <li>
-			        <div class="feature-item">
-			          <p>Скидки 50%</p>
-			          <a href="#">На 350 товаров</a>
-			        </div>
-			      </li>
-			      <li>
-			        <div class="feature-item">
-			          <p>Доставка</p>
-			          <a href="#">Бесплатно</a>
-			        </div>
-			      </li>
-			    </ul>
-			    <section class="slider">
-			      <div class="slide">
-			        <p>Перфораторы</p>
-			        <p>Настоящие мужские игрушки</p>
-			        <img src="img/slider-1.jpg" alt="slider-1">
-			        <a href="catalog.html">Открыть каталог</a>
-			      </div>
-			      <div class="slide">
-			        <p>Дрели</p>
-			        <p>Соседям на радость!</p>
-			        <img src="img/slider-2.jpg" alt="slider-2">
-			        <a href="catalog.html">Открыть каталог</a>
-			      </div>
-			    </section>
-			  </div>
-			</div>
-		</section>
+    			<div first="first-features">
+    				<ul class="feature-items">
+    					<li>
+    						<div class="feature-item">
+    							<p>Материалы</p>
+    							<a href="#">На любой вкус</a>
+    						</div>
+    					</li>
+    					<li>
+    						<div class="feature-item">
+    							<p>Инструменты</p>
+    							<a href="#">На все случаи</a>
+    						</div>
+    					</li>
+    					<li>
+    						<div class="feature-item">
+    							<p>Техника</p>
+    							<a href="#">Для стройки</a>
+    						</div>
+    					</li>
+    				</ul>
+    			</div>
+    			<div class="last-features">
+    				<ul class="feature-items">
+    					<li>
+    						<div class="feature-item">
+    							<p>Скидки 50%</p>
+    							<a href="#">На 350 товаров</a>
+				        </div>
+				      </li>
+				      <li>
+				        <div class="feature-item">
+				          <p>Доставка</p>
+				          <a href="#">Бесплатно</a>
+				        </div>
+				      </li>
+				    </ul>
+				    <section class="slider">
+				      <div class="slide">
+				        <p>Перфораторы</p>
+				        <p>Настоящие мужские игрушки</p>
+				        <img src="img/slider-1.jpg" alt="slider-1">
+				        <a href="catalog.html">Открыть каталог</a>
+				      </div>
+				      <div class="slide">
+				        <p>Дрели</p>
+				        <p>Соседям на радость!</p>
+				        <img src="img/slider-2.jpg" alt="slider-2">
+				        <a href="catalog.html">Открыть каталог</a>
+				      </div>
+				    </section>
+				  </div>
+				</div>
+			</section>
 
-		<section class="popular-items">
-			<div class="container">
-				<h3>Популярные товары:</h3>
-				<a href="#">Все популярные товары</a>
-        <ul class="items-list">
-          <li>
-            <img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 9000">
-            <a href="#"><h3>Перфоратор BOSCH BFG 9000</h3></a>
-            <div class="price">
-              <b>32500 Р.</b>
-              <b>25500 Р.</b>
-            </div>
-          </li>
-          <li>
-            <img src="img/product-2.jpg" alt="Перфоратор BOSCH BFG 3000">
-            <a href="#"><h3>Перфоратор BOSCH BFG 3000</h3></a>
-            <div class="price">
-              <b>22500 Р.</b>
-              <b>15500 Р.</b>
-            </div>
-          </li>
-          <li>
-            <img src="img/product-3.jpg" alt="Перфоратор BOSCH BFG 6000">
-            <a href="#"><h3>Перфоратор BOSCH BFG 6000</h3></a>
-            <div class="price">
-              <b>30500 Р.</b>
-              <b>25500 Р.</b>
-            </div>
-          </li>
-          <li>
-            <img src="img/product-4.jpg" alt="Перфоратор BOSCH BFG 2000">
-            <a href="#"><h3>Перфоратор BOSCH BFG 2000</h3></a>
-            <div class="price">
-              <b>12500 Р.</b>
-            </div>
-          </li>
-        </ul>
-      </div>
-    </section>
+			<section class="popular-items">
 
-    <section class="popular-brands">
-    	<div class="container">
-    		<h2>Популярные производители</h2>
-        <a href="#">Все производители</a>
-        <ul class="brands-list">
-          <li>
-            <a href="#"><img src="img/brand-bosch.png" alt="bosch"></a>
-          </li>
+				<div class="popular-items-header">
+					<h3>Популярные товары:</h3>
+					<a class="popular-items-link" href="#">Все популярные товары</a>
+				</div>
+
+				<div class="catalog">
+					<div class="catalog-item">
+						<img src="img.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 9000">
+						<div class="catalog-item-buttons">
+							<a href="#" class="button-item-buy">Купить</a>
+							<a href="#" class="button-item-bookmark">В закладки</a>
+						</div>
+						<a href="#" class="catalog-item-vendor">Перфоратор BOSCH</a>
+						<a href="#" class="catalog-item-model">BFG 9000</a>
+						<a href="#" class="catalog-item-price">32500 Р.</a>
+						<a href="#" class="catalog-item-discount">25500 Р.</a>
+					</div>
+
+	    		<div class="catalog-item">
+	    			<img src="img.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 3000">
+	    			<div class="catalog-item-buttons">
+	    				<a href="#" class="button-item-buy">Купить</a>
+							<a href="#" class="button-item-bookmark">В закладки</a>
+						</div>
+						<a href="#" class="catalog-item-vendor">Перфоратор BOSCH</a>
+						<a href="#" class="catalog-item-model">BFG 3000</a>
+						<a href="#" class="catalog-item-price">22500 Р.</a>
+						<a href="#" class="catalog-item-discount">15500 Р.</a>
+					</div>
+
+	    		<div class="catalog-item">
+	    			<img src="img.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 6000">
+	    			<div class="catalog-item-buttons">
+	    				<a href="#" class="button-item-buy">Купить</a>
+							<a href="#" class="button-item-bookmark">В закладки</a>
+						</div>
+						<a href="#" class="catalog-item-vendor">Перфоратор BOSCH</a>
+						<a href="#" class="catalog-item-model">BFG 6000</a>
+						<a href="#" class="catalog-item-price">30500 Р.</a>
+						<a href="#" class="catalog-item-discount">25500 Р.</a>
+					</div>
+
+	    		<div class="catalog-item">
+	    			<img src="img.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 2000">
+	    			<div class="catalog-item-buttons">
+	    				<a href="#" class="button-item-buy">Купить</a>
+							<a href="#" class="button-item-bookmark">В закладки</a>
+						</div>
+						<a href="#" class="catalog-item-vendor">Перфоратор BOSCH</a>
+						<a href="#" class="catalog-item-model">BFG 2000</a>
+						<a href="#" class="catalog-item-discount">12500 Р.</a>
+					</div>
+				</div>
+			</section>
+
+	    <section class="popular-brands">
+	    	<div class="popular-brands-header">
+	    		<h2>Популярные производители</h2>
+	        <a class="all-brands-link" href="#">Все производители</a>
+	      </div>
+	      <ul class="popular-brands-list">
+	      	<li>
+	      		<a href="#"><img src="img/brand-bosch.png" alt="bosch"></a>
+	      	</li>
           <li>
             <a href="#"><img src="img/brand-makita.png" alt="makita"></a>
           </li>
@@ -179,12 +197,11 @@
             <a href="#"><img src="img/brand-metabo.png" alt="metabo"></a>
           </li>
         </ul>
-      </div>
-    </section>
+      </section>
 
     <section class="services">
-      <div class="services-header">
-        <div class="container">
+    	<div class="services-header">
+    		<div class="container">
           <h2>Сервисы</h2>
           <p>Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
         </div>
